use OpenJDK 11 JRE slim base image